--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-	<script src="https://kit.fontawesome.com/f00c14539b.js" crossorigin="anonymous"></script>
 	
 	<title>StartPage</title>
  </head>
@@ -19,8 +18,8 @@
     
     <div class="row">
         <div class="col-md-6 offset-md-3 justify-content-center">
-            <form method="GET" action="https://www.google.com/search">
-                <input name="as_q" class="search-field" autofocus>
+            <form method="GET" action="https://www.google.com/search" target="_blank">
+                <input name="as_q" class="search-field" placeholder="Google search" autofocus>
                 <button type="submit" class="search-submit" value="" style="fill: white"></button>
             </form>
 		</div>
