--- a/index.html
+++ b/index.html
@@ -1,83 +1,122 @@
- <html>
- <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-	
-	<title>StartPage</title>
- </head>
- <body>
+<html>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
+
+    <title>StartPage</title>
+</head>
+<body>
 <div class="container">
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <div id="time" class="time"></div>
         </div>
     </div>
-    
+
     <div class="row">
         <div class="col-md-6 offset-md-3 justify-content-center">
             <form method="GET" action="https://www.google.com/search" target="_blank">
                 <input name="as_q" class="search-field" placeholder="Google search" autofocus>
                 <button type="submit" class="search-submit" value="" style="fill: white"></button>
             </form>
-		</div>
+        </div>
     </div>
-    
-    <div class="row align-items-start justify-content-center">
-    <div class="col-md-2 box">
-        <div class="heading">Entertainment</div>
-        <a href="https://www.netflix.com/" target="_blank">
-                <div class="link" tabindex="1">Netflix</div>
-        </a>
-        <a href="https://www.twitch.tv" target="_blank">
-            <div class="link" tabindex="2">Twitch</div>
-        </a>
-        <a href="https://www.wakanim.tv/" target="_blank">
-            <div class="link" tabindex="3">Wakanim</div>
-        </a>
-        <a href="https://www.youtube.com/" target="_blank">
-            <div class="link" tabindex="4">Youtube</div>
-        </a>
-    </div>
-    <div class="col-md-2 box">
-        <div class="heading">Develop</div>
-        <a href="https://github.com/ex0hunt" target="_blank">
-            <div class="link" tabindex="5">GitHub</div>
-        </a>
-    </div>
-    <div class="col-md-2 box">
-        <div class="heading">Study</div>
-        <a href="https://coursera.org" target="_blank">
-            <div class="link" tabindex="6">Coursera</div>
-        </a>
-    </div>
-    <div class="col-md-2 box">
-        <div class="heading">Creative</div>
 
-        <a href="https://www.deviantart.com/" target="_blank">
-            <div class="link" tabindex="8">DeviantArt</div>
-        </a>
-        <a href="https://unsplash.com/" target="_blank">
-            <div class="link" tabindex="10">Unsplash</div>
-        </a>
-        <a href="https://wallhaven.cc/" target="_blank">
-            <div class="link" tabindex="11">Wallhaven</div>
-        </a>
+    <div class="row align-items-start justify-content-center">
+        <div class="col-md-2 box">
+            <div class="heading">Entertainment</div>
+            <a href="https://www.netflix.com/" target="_blank">
+                <div class="link" tabindex="1">Netflix</div>
+            </a>
+            <a href="https://www.twitch.tv" target="_blank">
+                <div class="link" tabindex="2">Twitch</div>
+            </a>
+            <a href="https://www.wakanim.tv/" target="_blank">
+                <div class="link" tabindex="3">Wakanim</div>
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+                <div class="link" tabindex="4">Youtube</div>
+            </a>
+        </div>
+        <div class="col-md-2 box">
+            <div class="heading">Develop</div>
+            <a href="https://github.com/ex0hunt" target="_blank">
+                <div class="link" tabindex="5">GitHub</div>
+            </a>
+        </div>
+        <div class="col-md-2 box">
+            <div class="heading">Study</div>
+            <a href="https://coursera.org" target="_blank">
+                <div class="link" tabindex="6">Coursera</div>
+            </a>
+        </div>
+        <div class="col-md-2 box">
+            <div class="heading">Creative</div>
+
+            <a href="https://www.deviantart.com/" target="_blank">
+                <div class="link" tabindex="8">DeviantArt</div>
+            </a>
+            <a href="https://unsplash.com/" target="_blank">
+                <div class="link" tabindex="10">Unsplash</div>
+            </a>
+            <a href="https://wallhaven.cc/" target="_blank">
+                <div class="link" tabindex="11">Wallhaven</div>
+            </a>
+        </div>
+        <div class="col-md-2 box">
+            <div class="heading">Social</div>
+            <a href="https://www.reddit.com" target="_blank">
+                <div class="link" tabindex="12">Reddit</div>
+            </a>
+            <a href="https://www.twitter.com/" target="_blank">
+                <div class="link" tabindex="13">Twitter</div>
+            </a>
+        </div>
     </div>
-    <div class="col-md-2 box">
-        <div class="heading" >Social</div>
-        <a href="https://www.reddit.com" target="_blank">
-            <div class="link" tabindex="12">Reddit</div>
-        </a>
-        <a href="https://www.twitter.com/" target="_blank">
-            <div class="link" tabindex="13">Twitter</div>
-        </a>
-    </div>
-    </div>
-	
-	<script src="script.js"></script>
-	
- </body>
- </html>
+
+
+    <script>
+        function updateClock() {
+            var now = new Date();
+            hours = now.getHours();
+            minutes = now.getMinutes();
+            if (minutes < 10) {
+                time = hours + ':' + "0" + minutes;
+            } else {
+                time = hours + ':' + minutes;
+            }
+            if (hours < 10) {
+                time = "0" + time;
+            }
+            document.getElementById('time').innerHTML = time;
+            setTimeout(updateClock, 1000);
+        }
+
+        function calcHeight() {
+            var maxHeight = 0;
+            var elems = document.getElementsByClassName("box")
+            for (var e = 0; e < elems.length; e++) {
+                if (elems[e].offsetHeight > maxHeight) {
+                    maxHeight = elems[e].offsetHeight;
+                }
+            }
+            for (var e = 0; e < elems.length; e++) {
+                if (elems[e].offsetHeight < maxHeight) {
+                    elems[e].style.setProperty("height", maxHeight);
+                }
+            }
+
+
+        }
+
+        updateClock();
+        calcHeight();
+
+    </script>
+
+</body>
+</html>
