--- a/index.html
+++ b/index.html
@@ -81,18 +81,9 @@
 
     <script>
         function updateClock() {
-            var now = new Date();
-            hours = now.getHours();
-            minutes = now.getMinutes();
-            if (minutes < 10) {
-                time = hours + ':' + "0" + minutes;
-            } else {
-                time = hours + ':' + minutes;
-            }
-            if (hours < 10) {
-                time = "0" + time;
-            }
-            document.getElementById('time').innerHTML = time;
+            var options = {hour: '2-digit', minute:'2-digit'}
+            var dateString = new Date().toLocaleString(navigator.languages[0], options);
+            document.getElementById('time').innerHTML = dateString;
             setTimeout(updateClock, 1000);
         }
 
